@@ -110,6 +110,7 @@ Supported Presently
 Changelog for 1.3.40
 * Updated nginx configuration (Pongracz I)
 * GL account search now will search within descriptions for matches (Chris T)
+* Printing without an invoice number now errors instead of increments (Chris T)
 
 Changelog for 1.3.39
 * Fixed Internal Server Error clicking through ar/ap report (Chris T, 1022)
